--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -320,3 +320,19 @@ collections:
     published: 2024-03-06
     author: Your Name <your.name@email.domain>
 
+  edugain-series:
+    output: true
+    permalink: /:collection/:name
+    title: eduGAIN Series
+    summary: Integrate and connect with SAML
+    curriculum: eduGAIN
+    level: Series # Beginner|Intermediate|Advanced|Series|Non-technical
+    tags:
+      - series
+      - advanced
+    difficulty: 1 # number from 1 to 5
+    duration: 10 # number of minutes
+    status: draft # draft or published
+    published: 2024-03-08
+    author: Your Name <your.name@email.domain>
+
