Overview of tutorials (#79)
* Fix link and update tutorial durations

* Add callouts and reference links

* Update config

* Update oidc overview page

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -52,11 +52,11 @@ collections:
       - keycloak
       - openid connect
       - tutorial
-    difficulty: 1
-    duration: 10
+    difficulty: 2
+    duration: 15
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   connection-types:
     output: true
@@ -69,10 +69,10 @@ collections:
       - connect
       - overview
     difficulty: 1
-    duration: 10
+    duration: 5
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   log-into-federation-manager:
     output: true
@@ -86,10 +86,10 @@ collections:
       - federation manager
       - tutorial
     difficulty: 1
-    duration: 10
+    duration: 4
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   openid-connect-integration:
     output: true
@@ -102,11 +102,11 @@ collections:
     tags:
       - openid connect
       - tutorial
-    difficulty: 1
+    difficulty: 2
     duration: 10
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
   
   rapid-connect-integration:
     output: true
@@ -119,11 +119,11 @@ collections:
     tags:
       - rapid connect
       - tutorial
-    difficulty: 1
-    duration: 10
+    difficulty: 2
+    duration: 12
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   saml-integration:
     output: true
@@ -140,7 +140,7 @@ collections:
     duration: 60
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   connect-an-oidc-service:
     output: true
@@ -153,11 +153,11 @@ collections:
     tags:
       - openid connect
       - tutorial
-    difficulty: 1
-    duration: 10
+    difficulty: 2
+    duration: 3
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   connect-a-rapid-connect-service:
     output: true
@@ -170,11 +170,11 @@ collections:
     tags:
       - rapid connect
       - tutorial
-    difficulty: 1
+    difficulty: 2
     duration: 10
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   connect-a-saml-service:
     output: true
@@ -191,7 +191,7 @@ collections:
     duration: 10
     status: draft
     published: 2024-02-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   verifid-integration:
     output: true
@@ -204,11 +204,11 @@ collections:
     tags:
       - tutorial
       - verifid
-    difficulty: 1 # number from 1 to 5
-    duration: 10 # number of minutes
+    difficulty: 2 # number from 1 to 5
+    duration: 12 # number of minutes
     status: draft # draft or published
     published: 2024-02-14
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   connect-with-verifid:
     output: true
@@ -221,11 +221,11 @@ collections:
     tags:
       - tutorial
       - verifid
-    difficulty: 1 # number from 1 to 5
+    difficulty: 2 # number from 1 to 5
     duration: 10 # number of minutes
     status: draft # draft or published
     published: 2024-02-16
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   openid-connect-series:
     output: true
@@ -237,11 +237,11 @@ collections:
     tags:
       - series
       - beginner
-    difficulty: 1 # number from 1 to 5
-    duration: 10 # number of minutes
+    difficulty: 2 # number from 1 to 5
+    duration: 30 # number of minutes
     status: draft # draft or published
     published: 2024-02-28
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   rapid-connect-series:
     output: true
@@ -253,11 +253,11 @@ collections:
     tags:
       - series
       - beginner
-    difficulty: 1 # number from 1 to 5
-    duration: 10 # number of minutes
+    difficulty: 2 # number from 1 to 5
+    duration: 24 # number of minutes
     status: draft # draft or published
     published: 2024-02-29
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   verifid-series:
     output: true
@@ -269,11 +269,11 @@ collections:
     tags:
       - series
       - beginner
-    difficulty: 1 # number from 1 to 5
-    duration: 10 # number of minutes
+    difficulty: 2 # number from 1 to 5
+    duration: 24 # number of minutes
     status: draft # draft or published
     published: 2024-02-29
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   saml-series:
     output: true
@@ -286,10 +286,10 @@ collections:
       - series
       - advanced
     difficulty: 4 # number from 1 to 5
-    duration: 70 # number of minutes
+    duration: 72 # number of minutes
     status: draft # draft or published
     published: 2024-02-29
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   connect-to-edugain:
     output: true
@@ -303,10 +303,10 @@ collections:
       - tutorial
       - eduGAIN
     difficulty: 4 # number from 1 to 5
-    duration: 10 # number of minutes
+    duration: 5 # number of minutes
     status: draft # draft or published
     published: 2024-03-05
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   edugain-integration:
     output: true
@@ -320,10 +320,10 @@ collections:
       - tutorial
       - eduGAIN
     difficulty: 4 # number from 1 to 5
-    duration: 10 # number of minutes
+    duration: 16 # number of minutes
     status: draft # draft or published
     published: 2024-03-06
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   edugain-series:
     output: true
@@ -336,10 +336,10 @@ collections:
       - series
       - advanced
     difficulty: 4 # number from 1 to 5
-    duration: 10 # number of minutes
+    duration: 30 # number of minutes
     status: draft # draft or published
     published: 2024-03-08
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
   introduction-to-edugain:
     output: true
@@ -353,8 +353,8 @@ collections:
       - tutorial
       - eduGAIN
     difficulty: 4 # number from 1 to 5
-    duration: 10 # number of minutes
+    duration: 7 # number of minutes
     status: draft # draft or published
     published: 2024-03-08
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
