--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -358,3 +358,18 @@ collections:
     published: 2024-03-08
     author: Kelley Foster <kelley.foster@aaf.edu.au>
 
+  how-to-write-a-tutorial:
+    output: true
+    permalink: /:collection/:name
+    title: How to write a tutorial
+    summary: How to write a tutorial
+    category: Getting Started
+    level: Beginner
+    tags:
+      - tutorial
+    difficulty: 1 # number from 1 to 5
+    duration: 10 # number of minutes
+    status: draft # draft or published
+    published: 2024-05-23
+    author: Your Name <your.name@email.domain>
+
