Add initial tutorial content

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -371,5 +371,5 @@ collections:
     duration: 10 # number of minutes
     status: draft # draft or published
     published: 2024-05-23
-    author: Your Name <your.name@email.domain>
+    author: Kelley Foster <kelley.foster@aaf.edu.au>
 
