--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,44 +1,28 @@
-name: Feature Request
-description: Suggest an idea for the dev portal
+name: Request Tutorial
+description: Suggest an idea for a tutorial that you would find helpful
 labels: ["enhancement"]
 
 body:
   - type: markdown
     attributes:
-      value: "Thanks for taking the time to suggest a new feature."
+      value: "Thanks for taking the time to suggest a new tutorial."
   - type: markdown
     attributes:
-      value: "Note: Please search to see if an issue already exists for your suggested feature."
+      value: "Note: Please search to see if an issue already exists for your suggested tutorial."
 
   - type: input
-    id: feature-summary
+    id: tutorial-summary
     attributes:
-      label: Feature Summary
-      description: "Please enter a brief summary of the feature."
+      label: Tutorial Summary
+      description: "Please enter a brief summary of the tutorial."
     validations:
       required: true
-
-  - type: textarea
-    id: feature-purpose
-    attributes:
-      label: Purpose of the Feature
-      description: "Please describe what the feature is intended to achieve."
-    validations:
-      required: true
-
-  - type: textarea
-    id: feature-details
-    attributes:
-      label: Feature Details
-      description: "Please provide any additional details or context for the feature."
-    validations:
-      required: false
 
   - type: input
     id: contact
     attributes:
       label: Contact Details
-      description: "How can we get in touch with you if we need more info?"
+      description: "How can we get in touch with you if we need more information?"
       placeholder: e.g. email@example.com
     validations:
       required: true
